--- a/.github/workflows/workflow-release.yml
+++ b/.github/workflows/workflow-release.yml
@@ -13,6 +13,11 @@ on:
         type: boolean
         default: false
         description: "Enable debug logging for troubleshooting"
+      dry_run:
+        required: false
+        type: boolean
+        default: false
+        description: "Dry run mode - validate everything but don't create PR or make changes"
       node_version:
         required: false
         type: string
@@ -164,6 +169,7 @@ jobs:
     with:
       package_name: ${{ inputs.package_name }}
       debug: ${{ inputs.debug }}
+      dry_run: ${{ inputs.dry_run }}
       # Job control flags - only run create release PR since we already detected
       run_detect_release: false
       run_create_release_pr: true
@@ -184,7 +190,11 @@ jobs:
     steps:
       - name: Generate Release Summary
         run: |
-          echo "## 🚀 Release Workflow Summary" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ inputs.dry_run }}" = "true" ]; then
+            echo "## 🧪 Dry Run - Release Workflow Validation" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "## 🚀 Release Workflow Summary" >> $GITHUB_STEP_SUMMARY
+          fi
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Package**: \`${{ inputs.package_name }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -196,12 +206,29 @@ jobs:
             echo "This commit was not detected as a release commit. Use \`release:\` or \`release!:\` prefix to trigger releases." >> $GITHUB_STEP_SUMMARY
           elif [ "${{ needs.release.result }}" = "success" ]; then
             if [ "${{ needs.release.outputs.pr-created }}" = "true" ]; then
-              echo "✅ **Overall Status**: Release PR created successfully" >> $GITHUB_STEP_SUMMARY
-              echo "" >> $GITHUB_STEP_SUMMARY
-              echo "**New Version**: \`${{ needs.release.outputs.new-version }}\`" >> $GITHUB_STEP_SUMMARY
-              echo "**PR Number**: [#${{ needs.release.outputs.pr-number }}](${{ github.server_url }}/${{ github.repository }}/pull/${{ needs.release.outputs.pr-number }})" >> $GITHUB_STEP_SUMMARY
-              echo "" >> $GITHUB_STEP_SUMMARY
-              echo "🔄 **Next Steps**: Review and merge the release PR to publish the package." >> $GITHUB_STEP_SUMMARY
+              if [ "${{ inputs.dry_run }}" = "true" ]; then
+                echo "✅ **Overall Status**: Dry run validation successful" >> $GITHUB_STEP_SUMMARY
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "**New Version**: \`${{ needs.release.outputs.new-version }}\`" >> $GITHUB_STEP_SUMMARY
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "🧪 **Dry Run Complete**: All validations passed! No changes were made." >> $GITHUB_STEP_SUMMARY
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "### ✅ Validation Results:" >> $GITHUB_STEP_SUMMARY
+                echo "- Release commit detected successfully" >> $GITHUB_STEP_SUMMARY
+                echo "- Version calculation completed" >> $GITHUB_STEP_SUMMARY
+                echo "- Build and tests passed" >> $GITHUB_STEP_SUMMARY
+                echo "- Changelog generation successful" >> $GITHUB_STEP_SUMMARY
+                echo "- All prerequisites met for release PR creation" >> $GITHUB_STEP_SUMMARY
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "🚀 **Ready to Release**: Re-run with \`dry_run: false\` to create the actual release PR." >> $GITHUB_STEP_SUMMARY
+              else
+                echo "✅ **Overall Status**: Release PR created successfully" >> $GITHUB_STEP_SUMMARY
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "**New Version**: \`${{ needs.release.outputs.new-version }}\`" >> $GITHUB_STEP_SUMMARY
+                echo "**PR Number**: [#${{ needs.release.outputs.pr-number }}](${{ github.server_url }}/${{ github.repository }}/pull/${{ needs.release.outputs.pr-number }})" >> $GITHUB_STEP_SUMMARY
+                echo "" >> $GITHUB_STEP_SUMMARY
+                echo "🔄 **Next Steps**: Review and merge the release PR to publish the package." >> $GITHUB_STEP_SUMMARY
+              fi
             else
               echo "ℹ️ **Overall Status**: No release PR created" >> $GITHUB_STEP_SUMMARY
               echo "" >> $GITHUB_STEP_SUMMARY
