--- a/examples/individual-repo-workflows/release.yml
+++ b/examples/individual-repo-workflows/release.yml
@@ -20,6 +20,11 @@ on:
         type: boolean
         required: false
         default: false
+      dry_run:
+        description: "Dry run mode - validate everything but don't create PR or make changes"
+        type: boolean
+        required: false
+        default: false
       node_version:
         description: "Node.js version to use (default: lts/*)"
         type: string
@@ -77,6 +82,7 @@ jobs:
     with:
       package_name: "@cldmv/slothlet" # Required: Your NPM package name
       debug: ${{ github.event.inputs.debug == 'true' }}
+      dry_run: ${{ github.event.inputs.dry_run == 'true' }}
       node_version: ${{ github.event.inputs.node_version || 'lts/*' }}
       min_node_version: ${{ github.event.inputs.min_node_version || '20' }}
       max_node_major: ${{ github.event.inputs.max_node_major || '22' }}
